--- a/vignettes/baRulho.Rmd
+++ b/vignettes/baRulho.Rmd
@@ -40,11 +40,6 @@ editor_options:
 library(knitr)
 opts_chunk$set(tidy = TRUE, fig.align = "center", message = FALSE, warning = FALSE)
 
-source("~/Dropbox/R_package_testing/baRulho/R/spectrum_blur_ratio.R")
-source("~/Dropbox/R_package_testing/baRulho/R/internal_functions.R")
-source("~/Dropbox/R_package_testing/baRulho/R/spectrum_correlation.R")
-source("~/Dropbox/R_package_testing/baRulho/R/spcc_distortion.R")
-
 ```
 
 
@@ -116,7 +111,7 @@ library(viridis)
 
 ### Inputting acoustic data and annotations
 
-The package requires the annotation data to be input as a data frame, selection table or extended selection tables. If a data frame is used it must contain the following columns: 1) "sound.files": name of the .wav files, 2) "selec": unique annotation identifier (within a sound file), 3) "start": start time and 4) "end": end time of annotation, 5) 'top.freq': top frequency and  6) 'bottom.freq' and bottom frequency of the annotation. A selection table is an objects class from the package [warbleR](https://cran.r-project.org/package=warbleR) that contain annotation data (i.e. time-frequency position of sounds in sound files) that has been previously double-checked. An extended selection table is an object class (also from [warbleR](https://cran.r-project.org/package=warbleR)) that contains both the annotations and the corresponding acoustic data as wave objects. Therefore, extended selection tables are **self-contained objects** since the original sound files are no longer needed to perform acoustic analyses. These objects are created by the `selection_table()` function from [warbleR](https://cran.r-project.org/package=warbleR). Take a look at the [intro to warbleR vignette](https://cran.r-project.org/package=warbleR/vignettes/Intro_to_warbleR.html) for more details.
+The package requires the annotation data to be input as a data frame, selection table or extended selection tables. If a data frame is used it must contain the following columns: 1) "sound.files": name of the .wav files, 2) "selec": unique annotation identifier (within a sound file), 3) "start": start time and 4) "end": end time of annotation, 5) 'top.freq': top frequency (for bandpass) and  6) 'bottom.freq' and bottom frequency (for bandpass) of the annotation. A selection table is an objects class from the package [warbleR](https://cran.r-project.org/package=warbleR) that contain annotation data (i.e. time-frequency position of sounds in sound files) that has been previously double-checked. An extended selection table is an object class (also from [warbleR](https://cran.r-project.org/package=warbleR)) that contains both the annotations and the corresponding acoustic data as wave objects. Therefore, extended selection tables are **self-contained objects** since the original sound files are no longer needed to perform acoustic analyses. These objects are created by the `selection_table()` function from [warbleR](https://cran.r-project.org/package=warbleR). Take a look at the [intro to warbleR vignette](https://cran.r-project.org/package=warbleR/vignettes/Intro_to_warbleR.html) for more details. Selection tables and extended selection tables are recommended as they apply a double-checking step on the acoustic data during creation, which helps avoiding downstream errors during analysis. Analysis on extended selection tables also run faster than in the other object classes.
 
 <div class="alert alert-info">
 
@@ -1347,12 +1342,12 @@ kbl
 
 ### Spectrogram distortion
 
-Finally, the function `spcc_distortion()` measures spectrogram cross-correlation as a metric of signal distortion of signals. Values close to 1 means very similar spectrograms (i.e. little signal distortion). The function is a wrapper on [warbleR](https://cran.r-project.org/package=warbleR)'s `cross_correlation()`. It can be run as follows:
+Finally, the function `spcc()` measures spectrogram cross-correlation as a metric of signal distortion of signals. Values close to 1 means very similar spectrograms (i.e. little signal distortion). The function is a wrapper on [warbleR](https://cran.r-project.org/package=warbleR)'s `cross_correlation()`. It can be run as follows:
 
 ```{r, eval = TRUE}
 
 # run spcc
-spd <- spcc_distortion(X = playback_est, method = 1, wl = 512, pb = FALSE)
+spd <- spcc(X = playback_est, method = 1, wl = 512, pb = FALSE)
 
 # check output class
 is_extended_selection_table(spd)
@@ -1422,7 +1417,7 @@ This can be graphically represented as follows:
 ```{r, eval = TRUE}
 
 ggplot(np, aes(y = amp, x = freq, col = sound.files)) +
-  geom_line(size = 1.4) +
+  geom_line(linewidth = 1.4) +
    scale_color_viridis_d(begin = 0.2, end = 0.8, alpha = 0.5) +  
  labs(x = "Frequency (kHz)", y = "Amplitude (dBA)") +
   coord_flip() +
@@ -1441,7 +1436,7 @@ np <- noise_profile(X = playback_est[playback_est$distance > 5, ],
 np$sf.sl <- paste(np$sound.files, np$selec)
 
 ggplot(np, aes(y = amp, x = freq, col = sound.files, group = sf.sl)) +
-  geom_line(size = 1.4) +
+  geom_line(linewidth = 1.4) +
     scale_color_viridis_d(begin = 0.2, end = 0.8, alpha = 0.5) +  
  labs(x = "Frequency (kHz)", y = "Amplitude (dBA)") +
   coord_flip() +
@@ -1462,7 +1457,7 @@ np <- noise_profile(X = playback_est[playback_est$distance > 5, ],
 np$sf.sl <- paste(np$sound.files, np$selec)
 
 ggplot(np, aes(y = amp, x = freq, col = sound.files, group = sf.sl)) +
-  geom_line(size = 1.4) +
+  geom_line(linewidth = 1.4) +
   scale_color_viridis_d(begin = 0.2, end = 0.8, alpha = 0.5) +  
   labs(x = "Frequency (kHz)", y = "Amplitude (dBA)") +
   coord_flip() +
@@ -1489,7 +1484,7 @@ Araya-Salas, M. (2020), *baRulho: quantifying habitat-induced degradation of (an
 
 1.  Araya-Salas, M. (2020), *baRulho: quantifying habitat-induced degradation of (animal) acoustic signals in R*. R package version 1.0.0
   
-1. Araya-Salas M, Smith-Vidaurre G (2017) *warbleR: An R package to streamline analysis of animal acoustic signals*. Methods Ecol Evol 8:184–191.
+1. Araya-Salas M, Smith-Vidaurre G. (2017) *warbleR: An R package to streamline analysis of animal acoustic signals*. Methods Ecol Evol 8:184–191.
 
 1. Dabelsteen, T., Larsen, O. N., & Pedersen, S. B. (1993). *Habitat-induced degradation of sound signals: Quantifying the effects of communication sounds and bird location on blur ratio, excess attenuation, and signal-to-noise ratio in blackbird song*. The Journal of the Acoustical Society of America, 93(4), 2206.
 
